<resources>
    <string name="app_name">AndroidAdvancedLight</string>
    
    
    <string name="first_chapter">第一章</string>
    <string name="two_chapter">第二章</string>
    <string name="three_chapter">第三章</string>
    <string name="four_chapter">第四章</string>
    <string name="five_chapter">第五章</string>
    <string name="six_chapter">第六章</string>
    <string name="seven_chapter">第七章</string>
    <string name="eight_chapter">第八章</string>
    <string name="nice_chapter">第九章</string>
    <string name="ten_chapter">第十章</string>


    <string name="open_recyclerView">RecyclerView</string>
    <string name="item_recycler_content">content</string>
    <string name="open_navigationView">NavigationView</string>
    <string name="open_coordinatorLayout">CoordinatorLayout</string>
    <string name="open_viewSliding">View的滑动</string>
    <string name="four_RadioGroup">使用RadioGroup控件实现选择处理</string>
    <string name="four_RadioGroup_TextView">性别:</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="name">账号</string>
    <string name="password">密码</string>
    <string name="save">保存</string>
    <string name="remove">清除</string>
    <string name="show">展示</string>



    <string name="open_cardView">CardView</string>
    <string name="controlSize">控制圆角大小</string>
    <string name="controlArea">控制阴影面积</string>
    <string name="controlPicture">控制图片间距</string>
    <string name="SearchFiles">搜索文件</string>
    <string name="test">测试</string>
    <string name="determine">确定</string>


    <string name="custom_composite_controls">自定义组合控件</string>
</resources>
