<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/four_radioGroup_rl"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/four_RadioGroup_TextView"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/rg_textView1"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20dp"
            />
    <RadioGroup
        android:id="@+id/rg_myRadioGroup"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rg_myRadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/man"/>
        <RadioButton
            android:id="@+id/rg_myRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/woman"/>
    </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/four_File_rl"
        android:layout_below="@+id/four_radioGroup_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/four_File_et"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/four_File_btn"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/four_File_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"
            android:text="@string/SearchFiles"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/four_ContentProvider_rl"
        android:layout_below="@+id/four_File_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/four_ContentProvider_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/four_ContentProvider_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@+id/four_ContentProvider_name"
            />
        <TextView
            android:id="@+id/four_ContentProvider_password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_below="@+id/four_ContentProvider_name"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/four_ContentProvider_password_et"
            android:layout_below="@+id/four_ContentProvider_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@+id/four_ContentProvider_password"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_below="@+id/four_ContentProvider_password_et"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/four_save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>
            <Button
                android:id="@+id/four_show_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:text="@string/show"/>
        <Button
            android:id="@+id/four_remove_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:text="@string/remove"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>